--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^10.12.2"
+    "@types/node": "^10.12.2",
+    "rxjs": "^6.5.2"
   },
   "devDependencies": {
     "tslint": "^5.11.0",
